src/test/ui/enums-pats-not-idents.stderr
error[E0531]: cannot find tuple struct/variant `a` in this scope
  --> $DIR/enums-pats-not-idents.rs:2:9
   |
LL |     let a(1) = 13;
   |         ^ not found in this scope

error: aborting due to previous error

