src/test/ui/enums-pats-not-idents.rs
fn main() {
    let a(1) = 13; //~ ERROR cannot find tuple struct/variant `a` in this scope
}
